--- a/low-code-gen/pom.xml
+++ b/low-code-gen/pom.xml
@@ -18,6 +18,22 @@
             <groupId>com.github.houbb</groupId>
             <artifactId>low-code-dal</artifactId>
         </dependency>
+
+        <!--======================= OTHER =====================-->
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-engine-core</artifactId>
+            <version>${velocity.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${freemarker.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.houbb</groupId>
+            <artifactId>log-integration</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
