--- a/low-code-web/src/main/resources/application.yml
+++ b/low-code-web/src/main/resources/application.yml
@@ -13,6 +13,8 @@ spring:
   # 默认配置会自动在 /public /static /resources 目录寻找静态资源, 故不需要 /static 等前缀
   mvc:
     static-path-pattern: /**
+    # 接受日期参数问题
+    date-format: yyyy-MM-dd HH:mm:ss
 
   # 页面日期显示问题
   jackson:
