--- a/low-code-web/pom.xml
+++ b/low-code-web/pom.xml
@@ -18,6 +18,9 @@
             <artifactId>low-code-service</artifactId>
         </dependency>
 
+        <!--======================= INTER =====================-->
+
+
         <!--======================= OTHER =====================-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
