--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <heaven.version>0.1.129</heaven.version>
         <auto-log.version>0.0.13</auto-log.version>
         <log-integration.version>1.1.8</log-integration.version>
+        <iexcel.version>0.0.9</iexcel.version>
 
         <!--============================== OTHER ==============================-->
         <fastjson.version>1.2.73</fastjson.version>
@@ -110,7 +111,11 @@
                 <artifactId>log-integration</artifactId>
                 <version>${log-integration.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>com.github.houbb</groupId>
+                <artifactId>iexcel</artifactId>
+                <version>${iexcel.version}</version>
+            </dependency>
             <!--======================= OTHER =====================-->
             <dependency>
                 <groupId>com.alibaba</groupId>
